--- a/Klike/Sources/Controllers/KLLocationCell.xib
+++ b/Klike/Sources/Controllers/KLLocationCell.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="KLLocationCell" rowHeight="48" id="KGk-i7-Jjw" customClass="KLLocationCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="KLLocationCell" rowHeight="48" id="KGk-i7-Jjw" customClass="KLLocationCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -67,7 +67,7 @@
                 <outlet property="topSeparator" destination="k2C-qw-MOG" id="k1l-WD-cSE"/>
                 <outlet property="topSeparatorLeftContraint" destination="eZE-G8-b2X" id="lpj-hK-J7Y"/>
             </connections>
-            <point key="canvasLocation" x="238" y="-123"/>
+            <point key="canvasLocation" x="-64" y="-90"/>
         </tableViewCell>
     </objects>
     <resources>
