Add changes for invite friend UI

--- a/Klike/Sources/Views/KLInviteSocialTableViewCell.xib
+++ b/Klike/Sources/Views/KLInviteSocialTableViewCell.xib
@@ -16,19 +16,31 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U19-pw-tN7">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Tc-gG-TpK">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hWZ-f5-LbU">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J0J-OX-1gt" userLabel="icon">
+                                        <rect key="frame" x="16" y="16" width="32" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="32" id="fiL-NG-c4T"/>
+                                            <constraint firstAttribute="height" constant="32" id="gal-gq-1S5"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Invite via Facebook" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ild-XO-OUm">
+                                        <rect key="frame" x="63" y="21" width="156" height="22"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <color key="textColor" red="0.3921568627" green="0.40000000000000002" blue="0.79215686269999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="64" id="T56-Fo-1IM"/>
+                                    <constraint firstItem="J0J-OX-1gt" firstAttribute="leading" secondItem="hWZ-f5-LbU" secondAttribute="leading" constant="16" id="8xd-AP-Y3H"/>
+                                    <constraint firstItem="ild-XO-OUm" firstAttribute="leading" secondItem="J0J-OX-1gt" secondAttribute="trailing" constant="15" id="WOS-GR-z60"/>
+                                    <constraint firstItem="ild-XO-OUm" firstAttribute="centerY" secondItem="J0J-OX-1gt" secondAttribute="centerY" constant="-0.5" id="kJK-HX-woF"/>
+                                    <constraint firstAttribute="centerY" secondItem="J0J-OX-1gt" secondAttribute="centerY" id="wpK-Yo-ZKV"/>
                                 </constraints>
-                                <inset key="contentEdgeInsets" minX="16" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <inset key="titleEdgeInsets" minX="16" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <state key="normal" title="Invite via Email" image="ic_fb">
-                                    <color key="titleColor" red="0.3921568627" green="0.40000000000000002" blue="0.79215686269999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7IO-dn-8FN" userLabel="separator first">
                                 <rect key="frame" x="0.0" y="63" width="600" height="1"/>
                                 <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -42,11 +54,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="7IO-dn-8FN" secondAttribute="bottom" id="2jv-fG-519"/>
+                            <constraint firstItem="hWZ-f5-LbU" firstAttribute="top" secondItem="U19-pw-tN7" secondAttribute="top" id="6gr-6g-xia"/>
+                            <constraint firstAttribute="bottom" secondItem="hWZ-f5-LbU" secondAttribute="bottom" id="AIO-WH-NbP"/>
+                            <constraint firstItem="hWZ-f5-LbU" firstAttribute="leading" secondItem="U19-pw-tN7" secondAttribute="leading" id="AQL-vW-XMw"/>
                             <constraint firstItem="7IO-dn-8FN" firstAttribute="leading" secondItem="U19-pw-tN7" secondAttribute="leading" id="Ak7-9S-rBz"/>
-                            <constraint firstAttribute="trailing" secondItem="1Tc-gG-TpK" secondAttribute="trailing" id="IOJ-WQ-sjb"/>
                             <constraint firstAttribute="trailing" secondItem="7IO-dn-8FN" secondAttribute="trailing" id="JD7-0z-Mz1"/>
-                            <constraint firstItem="1Tc-gG-TpK" firstAttribute="leading" secondItem="U19-pw-tN7" secondAttribute="leading" id="adC-qv-Pg0"/>
-                            <constraint firstAttribute="centerY" secondItem="1Tc-gG-TpK" secondAttribute="centerY" id="ucl-EW-4v2"/>
+                            <constraint firstAttribute="trailing" secondItem="hWZ-f5-LbU" secondAttribute="trailing" id="QLy-wD-Ghk"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -58,13 +71,11 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="_buttonInvite" destination="1Tc-gG-TpK" id="yd0-0s-8LN"/>
+                <outlet property="_imageIcon" destination="J0J-OX-1gt" id="Rg0-u6-9XI"/>
+                <outlet property="_labelSocial" destination="ild-XO-OUm" id="WkT-U0-R33"/>
                 <outlet property="_viewSeparator" destination="7IO-dn-8FN" id="0RA-xr-PSc"/>
             </connections>
-            <point key="canvasLocation" x="833" y="420.5"/>
+            <point key="canvasLocation" x="833" y="417.5"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="ic_fb" width="32" height="32"/>
-    </resources>
 </document>
