--- a/Klike/Sources/Views/KLInviteFriendTableViewCell.xib
+++ b/Klike/Sources/Views/KLInviteFriendTableViewCell.xib
@@ -24,17 +24,17 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AR" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Y8-6l-KE5">
-                                <rect key="frame" x="16" y="16" width="32" height="32"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="16" y="17" width="32" height="31"/>
+                                <color key="backgroundColor" red="0.90980392156862744" green="0.90980392156862744" blue="0.92941176470588238" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="32" id="HIA-cU-HSL"/>
+                                    <constraint firstAttribute="height" constant="31" id="HIA-cU-HSL"/>
                                     <constraint firstAttribute="width" constant="32" id="eZv-DN-9rp"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" red="0.70196078431372544" green="0.70196078431372544" blue="0.74117647058823533" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="i5w-mE-EHQ" userLabel="mask">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mask" translatesAutoresizingMaskIntoConstraints="NO" id="i5w-mE-EHQ" userLabel="mask">
                                 <rect key="frame" x="16" y="16" width="32" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="32" id="fzW-B1-eQg"/>
@@ -42,9 +42,9 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Annabel Riot" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pNm-11-NhI" userLabel="userName">
-                                <rect key="frame" x="56" y="21" width="99" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <rect key="frame" x="56" y="22" width="93" height="20"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" red="0.11372549019607843" green="0.12549019607843137" blue="0.15294117647058825" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CfT-nn-Ncc">
@@ -53,10 +53,15 @@
                                     <constraint firstAttribute="height" constant="24" id="GGP-u3-SOQ"/>
                                     <constraint firstAttribute="width" constant="56" id="Hsv-Rs-4Sk"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Invite">
+                                    <color key="titleColor" red="0.39215686274509803" green="0.40000000000000002" blue="0.792156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <state key="highlighted" title="Invited"/>
+                                <connections>
+                                    <action selector="onAddUser:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ZBm-i4-3un"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bj3-aL-eZk">
                                 <rect key="frame" x="528" y="20" width="56" height="24"/>
@@ -64,9 +69,14 @@
                                     <constraint firstAttribute="height" constant="24" id="9Q5-FX-Xrl"/>
                                     <constraint firstAttribute="width" constant="56" id="IgH-zg-AmH"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Email">
+                                    <color key="titleColor" red="0.39215686274509803" green="0.40000000000000002" blue="0.792156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="onMailUser:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="GZy-vg-nUm"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="KLInviteFriendTableViewCell" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lK9-mw-Pn7">
                                 <rect key="frame" x="464" y="20" width="56" height="24"/>
@@ -74,9 +84,14 @@
                                     <constraint firstAttribute="height" constant="24" id="7Uc-sm-LWm"/>
                                     <constraint firstAttribute="width" constant="56" id="y4j-NW-YJs"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="SMS">
+                                    <color key="titleColor" red="0.39215686274509803" green="0.40000000000000002" blue="0.792156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="onSmsUser:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="f5U-yt-7Rf"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KIa-aG-yEZ">
                                 <rect key="frame" x="56" y="62" width="544" height="1"/>
@@ -97,7 +112,7 @@
                             <constraint firstAttribute="trailing" secondItem="CfT-nn-Ncc" secondAttribute="trailing" constant="16" id="K6b-8x-KVC"/>
                             <constraint firstItem="i5w-mE-EHQ" firstAttribute="width" secondItem="mZQ-eA-vSX" secondAttribute="width" id="QpV-en-dmX"/>
                             <constraint firstAttribute="trailing" secondItem="lK9-mw-Pn7" secondAttribute="trailing" priority="750" constant="16" id="Tll-1X-pYg"/>
-                            <constraint firstAttribute="centerY" secondItem="4Y8-6l-KE5" secondAttribute="centerY" id="Vv9-Sw-YYN"/>
+                            <constraint firstAttribute="centerY" secondItem="4Y8-6l-KE5" secondAttribute="centerY" constant="-1" id="Vv9-Sw-YYN"/>
                             <constraint firstAttribute="centerY" secondItem="mZQ-eA-vSX" secondAttribute="centerY" constant="-0.5" id="WFT-N8-JSy"/>
                             <constraint firstAttribute="bottom" secondItem="KIa-aG-yEZ" secondAttribute="bottom" id="We0-T1-oA7"/>
                             <constraint firstItem="pNm-11-NhI" firstAttribute="leading" secondItem="KIa-aG-yEZ" secondAttribute="leading" id="Zug-4y-Oi6"/>
@@ -129,4 +144,7 @@
             <point key="canvasLocation" x="833" y="420"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="mask" width="38" height="38"/>
+    </resources>
 </document>
