--- a/Klike/Sources/Controllers/KLInviteFriendsViewController.xib
+++ b/Klike/Sources/Controllers/KLInviteFriendsViewController.xib
@@ -19,7 +19,7 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vke-Dc-dHq">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vke-Dc-dHq">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                 </scrollView>
             </subviews>
@@ -43,11 +43,14 @@
                         <constraint firstAttribute="height" constant="64" id="1v7-bz-DEO"/>
                     </constraints>
                     <inset key="contentEdgeInsets" minX="16" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    <inset key="titleEdgeInsets" minX="16" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    <state key="normal" title="Invite via Email" image="ic_fb">
+                    <inset key="titleEdgeInsets" minX="15" minY="1" maxX="0.0" maxY="0.0"/>
+                    <state key="normal" title="Invite via Email" image="ic_email">
                         <color key="titleColor" red="0.3921568627" green="0.40000000000000002" blue="0.79215686269999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="onConnectEmail:" destination="-1" eventType="touchUpInside" id="7SK-lJ-5xS"/>
+                    </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c5H-Cv-oL8" userLabel="separator last">
                     <rect key="frame" x="0.0" y="536" width="600" height="1"/>
@@ -57,14 +60,6 @@
                         <constraint firstAttribute="height" constant="1" id="soK-uk-jbP"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C27-i4-gn5" userLabel="separator first">
-                    <rect key="frame" x="0.0" y="471" width="600" height="1"/>
-                    <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="1" id="XAX-zF-PqX"/>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="v9w-PH-REV"/>
-                    </constraints>
-                </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="owj-0v-JMz">
                     <rect key="frame" x="0.0" y="472" width="600" height="64"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -72,50 +67,79 @@
                         <constraint firstAttribute="height" constant="64" id="aw8-2A-YC0"/>
                     </constraints>
                     <inset key="contentEdgeInsets" minX="16" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    <inset key="titleEdgeInsets" minX="16" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    <state key="normal" title="Connect Contacts" image="ic_fb">
+                    <inset key="titleEdgeInsets" minX="15" minY="1" maxX="0.0" maxY="0.0"/>
+                    <state key="normal" title="Connect Contacts" image="ic_cont">
                         <color key="titleColor" red="0.39215686274509803" green="0.40000000000000002" blue="0.792156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="onConnectContacts:" destination="-1" eventType="touchUpInside" id="MR3-wL-gye"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BwK-u5-zmd">
-                    <rect key="frame" x="0.0" y="406" width="600" height="64"/>
+                    <rect key="frame" x="0.0" y="408" width="600" height="64"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="64" id="6ML-y2-a3a"/>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="64" id="D66-gB-goT"/>
                     </constraints>
                     <inset key="contentEdgeInsets" minX="16" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    <inset key="titleEdgeInsets" minX="16" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    <inset key="titleEdgeInsets" minX="15" minY="1" maxX="0.0" maxY="0.0"/>
                     <state key="normal" title="Invite via Facebook" image="ic_fb">
                         <color key="titleColor" red="0.3921568627" green="0.40000000000000002" blue="0.79215686269999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="onConnectFacebook:" destination="-1" eventType="touchUpInside" id="5l6-Yo-vHo"/>
+                    </connections>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oml-kS-gdB" userLabel="separator first">
+                    <rect key="frame" x="0.0" y="408" width="600" height="1"/>
+                    <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="f6F-PH-hFc"/>
+                        <constraint firstAttribute="height" constant="1" id="sME-Y7-ExS"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C27-i4-gn5" userLabel="separator second">
+                    <rect key="frame" x="0.0" y="471" width="600" height="1"/>
+                    <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="XAX-zF-PqX"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="v9w-PH-REV"/>
+                    </constraints>
+                </view>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="c5H-Cv-oL8" firstAttribute="top" secondItem="C27-i4-gn5" secondAttribute="bottom" constant="64" id="1zk-V6-z0d"/>
                 <constraint firstItem="c5H-Cv-oL8" firstAttribute="bottom" secondItem="owj-0v-JMz" secondAttribute="bottom" constant="1" id="3bT-K6-qLb"/>
                 <constraint firstAttribute="trailing" secondItem="C27-i4-gn5" secondAttribute="trailing" id="7b0-1T-QVn"/>
                 <constraint firstItem="pwV-e1-ZVT" firstAttribute="leading" secondItem="TiR-BO-xok" secondAttribute="leading" id="8Zw-CG-J8m"/>
                 <constraint firstAttribute="trailing" secondItem="c5H-Cv-oL8" secondAttribute="trailing" id="9IF-Ja-hsR"/>
                 <constraint firstItem="C27-i4-gn5" firstAttribute="leading" secondItem="TiR-BO-xok" secondAttribute="leading" id="9m4-Cl-Ndx"/>
+                <constraint firstItem="pwV-e1-ZVT" firstAttribute="top" secondItem="owj-0v-JMz" secondAttribute="bottom" id="FHW-NH-0n0"/>
                 <constraint firstItem="c5H-Cv-oL8" firstAttribute="leading" secondItem="TiR-BO-xok" secondAttribute="leading" id="FcQ-Kc-PkV"/>
-                <constraint firstItem="C27-i4-gn5" firstAttribute="top" secondItem="BwK-u5-zmd" secondAttribute="bottom" constant="1" id="Ffh-cT-GiO"/>
                 <constraint firstItem="BwK-u5-zmd" firstAttribute="leading" secondItem="TiR-BO-xok" secondAttribute="leading" id="G2J-bk-e80"/>
                 <constraint firstAttribute="bottom" secondItem="pwV-e1-ZVT" secondAttribute="bottom" id="HRE-sK-6Bb"/>
                 <constraint firstAttribute="trailing" secondItem="BwK-u5-zmd" secondAttribute="trailing" id="L1g-O3-agM"/>
                 <constraint firstAttribute="trailing" secondItem="pwV-e1-ZVT" secondAttribute="trailing" id="PoB-Xt-1bw"/>
+                <constraint firstItem="owj-0v-JMz" firstAttribute="top" secondItem="BwK-u5-zmd" secondAttribute="bottom" id="RKv-Al-mnj"/>
+                <constraint firstItem="Oml-kS-gdB" firstAttribute="leading" secondItem="TiR-BO-xok" secondAttribute="leading" id="SNu-Pb-rSX"/>
                 <constraint firstItem="owj-0v-JMz" firstAttribute="leading" secondItem="TiR-BO-xok" secondAttribute="leading" id="VfF-mh-Cks"/>
                 <constraint firstItem="owj-0v-JMz" firstAttribute="top" secondItem="C27-i4-gn5" secondAttribute="bottom" id="XHt-tH-GRX"/>
+                <constraint firstItem="Oml-kS-gdB" firstAttribute="top" secondItem="BwK-u5-zmd" secondAttribute="top" id="gSN-8r-vG6"/>
                 <constraint firstItem="pwV-e1-ZVT" firstAttribute="top" secondItem="c5H-Cv-oL8" secondAttribute="top" id="hCL-ZO-5uV"/>
                 <constraint firstItem="pwV-e1-ZVT" firstAttribute="width" secondItem="c5H-Cv-oL8" secondAttribute="width" id="hIB-ce-pip"/>
                 <constraint firstAttribute="trailing" secondItem="owj-0v-JMz" secondAttribute="trailing" id="ru2-UX-ARf"/>
+                <constraint firstAttribute="trailing" secondItem="Oml-kS-gdB" secondAttribute="trailing" id="saT-K9-Bha"/>
             </constraints>
             <point key="canvasLocation" x="1179" y="490"/>
         </view>
     </objects>
     <resources>
-        <image name="ic_fb" width="32" height="32"/>
+        <image name="ic_cont" width="24" height="25"/>
+        <image name="ic_email" width="24" height="28"/>
+        <image name="ic_fb" width="24" height="24"/>
     </resources>
 </document>
