--- a/Klike/Sources/Views/KLInviteSocialTableViewCell.xib
+++ b/Klike/Sources/Views/KLInviteSocialTableViewCell.xib
@@ -19,16 +19,16 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hWZ-f5-LbU">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J0J-OX-1gt" userLabel="icon">
-                                        <rect key="frame" x="16" y="16" width="32" height="32"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J0J-OX-1gt" userLabel="icon">
+                                        <rect key="frame" x="16" y="20" width="24" height="24"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="32" id="fiL-NG-c4T"/>
-                                            <constraint firstAttribute="height" constant="32" id="gal-gq-1S5"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="24" id="ZSg-Fq-6xs"/>
+                                            <constraint firstAttribute="width" constant="24" id="fiL-NG-c4T"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Invite via Facebook" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ild-XO-OUm">
-                                        <rect key="frame" x="63" y="21" width="156" height="22"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <rect key="frame" x="55" y="22" width="149" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.3921568627" green="0.40000000000000002" blue="0.79215686269999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -36,8 +36,9 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="J0J-OX-1gt" firstAttribute="leading" secondItem="hWZ-f5-LbU" secondAttribute="leading" constant="16" id="8xd-AP-Y3H"/>
+                                    <constraint firstItem="J0J-OX-1gt" firstAttribute="centerY" secondItem="ild-XO-OUm" secondAttribute="centerY" id="FKK-dG-Na0"/>
                                     <constraint firstItem="ild-XO-OUm" firstAttribute="leading" secondItem="J0J-OX-1gt" secondAttribute="trailing" constant="15" id="WOS-GR-z60"/>
-                                    <constraint firstItem="ild-XO-OUm" firstAttribute="centerY" secondItem="J0J-OX-1gt" secondAttribute="centerY" constant="-0.5" id="kJK-HX-woF"/>
+                                    <constraint firstAttribute="centerY" secondItem="ild-XO-OUm" secondAttribute="centerY" id="kwA-6B-je1"/>
                                     <constraint firstAttribute="centerY" secondItem="J0J-OX-1gt" secondAttribute="centerY" id="wpK-Yo-ZKV"/>
                                 </constraints>
                             </view>
